Update theme based on domain tool design

--- a/src/theme.config
+++ b/src/theme.config
@@ -19,58 +19,58 @@
 
 /* Global */
 @site       : 'cortico';
-@reset      : 'default';
+@reset      : 'cortico';
 
 /* Elements */
-@button     : 'default';
-@container  : 'default';
-@divider    : 'default';
-@flag       : 'default';
-@header     : 'default';
-@icon       : 'default';
-@image      : 'default';
-@input      : 'default';
-@label      : 'default';
-@list       : 'default';
-@loader     : 'default';
-@rail       : 'default';
-@reveal     : 'default';
-@segment    : 'default';
-@step       : 'default';
+@button     : 'cortico';
+@container  : 'cortico';
+@divider    : 'cortico';
+@flag       : 'cortico';
+@header     : 'cortico';
+@icon       : 'cortico';
+@image      : 'cortico';
+@input      : 'cortico';
+@label      : 'cortico';
+@list       : 'cortico';
+@loader     : 'cortico';
+@rail       : 'cortico';
+@reveal     : 'cortico';
+@segment    : 'cortico';
+@step       : 'cortico';
 
 /* Collections */
-@breadcrumb : 'default';
-@form       : 'default';
-@grid       : 'default';
-@menu       : 'default';
-@message    : 'default';
-@table      : 'default';
+@breadcrumb : 'cortico';
+@form       : 'cortico';
+@grid       : 'cortico';
+@menu       : 'cortico';
+@message    : 'cortico';
+@table      : 'cortico';
 
 /* Modules */
-@accordion  : 'default';
-@checkbox   : 'default';
-@dimmer     : 'default';
-@dropdown   : 'default';
-@embed      : 'default';
-@modal      : 'default';
-@nag        : 'default';
-@popup      : 'default';
-@progress   : 'default';
-@rating     : 'default';
-@search     : 'default';
-@shape      : 'default';
-@sidebar    : 'default';
-@sticky     : 'default';
-@tab        : 'default';
-@transition : 'default';
+@accordion  : 'cortico';
+@checkbox   : 'cortico';
+@dimmer     : 'cortico';
+@dropdown   : 'cortico';
+@embed      : 'cortico';
+@modal      : 'cortico';
+@nag        : 'cortico';
+@popup      : 'cortico';
+@progress   : 'cortico';
+@rating     : 'cortico';
+@search     : 'cortico';
+@shape      : 'cortico';
+@sidebar    : 'cortico';
+@sticky     : 'cortico';
+@tab        : 'cortico';
+@transition : 'cortico';
 
 /* Views */
-@ad         : 'default';
-@card       : 'default';
-@comment    : 'default';
-@feed       : 'default';
-@item       : 'default';
-@statistic  : 'default';
+@ad         : 'cortico';
+@card       : 'cortico';
+@comment    : 'cortico';
+@feed       : 'cortico';
+@item       : 'cortico';
+@statistic  : 'cortico';
 
 /*******************************
             Folders
