Use default checkbox

--- a/src/theme.config
+++ b/src/theme.config
@@ -48,7 +48,7 @@
 
 /* Modules */
 @accordion  : 'cortico';
-@checkbox   : 'cortico';
+@checkbox   : 'default';
 @dimmer     : 'cortico';
 @dropdown   : 'cortico';
 @embed      : 'cortico';
